code clean up done

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div id="home">
 	    	<div id="headerwrap"  class="">
 			<div class="bg embed-responsive embed-responsive-16by9">
-				<video id="video1" loop autoplay preload="auto" poster="video.jpg" class="embed-responsive-item"> 
+				<video id="video1" loop autoplay preload="auto" class="embed-responsive-item"> 
                 <source src="assets/media/trl.mp4" type="video/mp4"/>
                 <source src="assets/media/trl.webm" type="video/webm"/>
                 <source src="assets/media/trl.ogv" type="video/ogv"/>
@@ -935,7 +935,7 @@ not costing put an upfront investment for their community.
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-65524096-1', 'auto');
   ga('send', 'pageview');
@@ -949,26 +949,6 @@ not costing put an upfront investment for their community.
     <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
 <script src="assets/js/masterslider/masterslider.min.js"></script>
 <script type="text/javascript">	
-(function($) {
- "use strict";
-
-	var slider5 = new MasterSlider();
-	slider5.setup('masterslider5' , {
-		loop:true,
-		width:240,
-		height:240,
-		speed:40,
-		view:'focus',
-		autoplay:true,
-		preload:0,
-		space:35,
-		viewOptions:{centerSpace:1.6}
-	});
-	slider5.control('arrows');
-	slider5.control('slideinfo',{insertTo:'#staff-info'});
-
-	
-})(jQuery);
 
 
 $('#contact-form').bootstrapValidator({
