--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 						<div class="col-xs-1 spinner"><i class="fa fa-cog fa-spin"></i>
 						</div>
 						<div class="col-xs-10">
-							<h4 class="product-name"><strong>Stunapp</strong></h4>
+							<h4 class="product-name"><strong>Vyavsaay</strong></h4>
 
 							<div class="notice notice-info">is a nimble digital agency crafting high quality apps and websites.</div>
 						</div>
@@ -519,7 +519,7 @@
 						</div>
 						<div class="col-xs-10">
 							<h4 class="product-name"><strong>The challenge:</strong></h4>
-						<div class="notice notice-info">One of the Stunapp clients started with Digital Ocean as their platform. Digital Ocean is good for developers. As, it takes out the hassle of maintaining the infrastructure</div>
+						<div class="notice notice-info">One of the Vyavsaay clients started with Digital Ocean as their platform. Digital Ocean is good for developers. As, it takes out the hassle of maintaining the infrastructure</div>
 						</div>
 						
 					</div>
