Moving to London. Wohoo! Address updated.

--- a/index.html
+++ b/index.html
@@ -835,9 +835,16 @@ not costing put an upfront investment for their community.
 								<h4 class="bold"><i class="fa fa-building-o"></i>&nbsp;&nbsp;Contact Us</h4>
 								<!-- Foot Item Content -->
 								<div class="foot-item-content address ">
+                                <p><span style="color: #8884; font-size: 15px; font-family: Arimo;"><span style="color: #8884;"><strong>UK Office</strong></span><br />
+                                                        5th floor Hyde Park Hayes 3,<br />
+                                                        11 Millington Road,<br />
+                                                        Hayes, Middlesex, UB3 4AZ<br />
+                                                        United Kingdom</span></p>
+                                                        <p class="tel"> <i class="fa fa-phone"></i> Tel : +44 (0)2089823596 <br>
+                                                        <i class="fa fa-envelope"></i>  Mail : <a href="#">hello@theremotelab.com</a><br>
+                                                        <p><span style="color: #8884;">
 								
-									<p class="tel"> <i class="fa fa-phone"></i> Tel : + 1 325 261 4021 <br>
-									<i class="fa fa-envelope"></i>  Mail : <a href="#">hello@theremotelab.com</a><br>
+
 									</p>
 								</div>
 								<!-- -->
@@ -848,14 +855,14 @@ not costing put an upfront investment for their community.
 							<div class="foot-item">
 								<!-- Heading -->
 								<div class="subscribe-box">
-									<h4 class="bold">Subscribe Here:</h4>
+									<h4 class="bold">Get regular updates:</h4>
 									<!-- Form -->
 									<form id="myform">
 										<!-- Input Group -->
 										<div class="input-group">
 
 											<span class="input-group-btn">
-												<button class="btn btn-lg btn-warning" data-toggle="modal"type="button" href="#formModal" >Subscribe Now!</button>
+												<button class="btn btn-lg btn-warning" data-toggle="modal"type="button" href="#formModal" >Stay Connected!</button>
 											</span>
 										</div>
 									</form>
@@ -892,7 +899,7 @@ not costing put an upfront investment for their community.
             <div class="modal-content">
                 <div class="modal-header modal-header-success" style="text-align:center">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <span style="color:#fff;font-size:22px">Please provide your information </span>
+                    <span style="color:#fff;font-size:22px">Want help? Please reach out to us </span>
                 </div>
                 <div class="modal-body">
                 		<div class="form-area">  
@@ -924,7 +931,7 @@ not costing put an upfront investment for their community.
     </div><!-- /.modal -->
 		<div id="footerwrap">
 			<div class="container">
-				<h4>Copyright © 2015 The Remote Lab (LLP). All rights reserved.</h4>
+				<h4>Copyright © 2015 Opsly Solutions (LLP). All rights reserved.</h4>
 			</div>
 		</div>
 
