--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<li><a href="#about" class="smoothScroll">WHAT WE DO</a></li>
 			<li><a href="#offerings" class="smoothScroll">OFFERINGS</a></li>			
             <li><a href="#blog" class="smoothScroll"> LAB</a></li>
-			<li><a href="http://theremotelab.io/blog" target="_blank" class="smoothScroll"> BLOG</a></li>         
+			<li><a href="http://theremotelab.io/testzone" target="_blank" class="smoothScroll"> BLOG</a></li>         
 			<li><a href="#careers" class="smoothScroll">CAREERS</a></li>
 			<li><a href="#contact" class="smoothScroll"> CONTACT US</a></li>
 		</ul>
